[workspace]
members = [
    "addresses",
    "base58",
    "bitcoin",
    "hashes",
    "internals",
    "io",
    "primitives",
    "units",
]
resolver = "2"

[patch.crates-io.satsnet-addresses]
path = "addresses"

[patch.crates-io.base58ck]
path = "base58"

[patch.crates-io.bitcoin]
path = "bitcoin"

[patch.crates-io.satsnet_hashes]
path = "hashes"

[patch.crates-io.satsnet-internals]
path = "internals"

[patch.crates-io.satsnet-io]
path = "io"

[patch.crates-io.satsnet-primitives]
path = "primitives"

[patch.crates-io.satsnet-units]
path = "units"
