[workspace]
members = ["satsnet", "hashes", "internals", "io", "base58"]
resolver = "2"

[patch.crates-io.satsnet-base58ck]
path = "base58"

[patch.crates-io.satsnet]
path = "satsnet"

[patch.crates-io.satsnet_hashes]
path = "hashes"

[patch.crates-io.satsnet-internals]
path = "internals"

[patch.crates-io.satsnet-io]
path = "io"