[package]
name = "bitcoin-addresses"
version = "0.0.0"
authors = ["Jacky Chen <softwarecheng@gmail.com>"]
repository = "https://github.com/sat20-labs/rust-satsnet"
description = "Bitcoin address"
categories = ["cryptography::cryptocurrencies"]
keywords = ["satsnet", "bitcoin", "types"]
edition = "2021"
rust-version = "1.63.0"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
