[package]
name = "satsnet-base58ck"
version = "0.1.0"
authors = ["Jacky Chen <softwarecheng@gmail.com>"]
license = "CC0-1.0"
repository = "https://github.com/sat20-labs/rust-satsnet/"
description = "Bitcoin base58 encoding with checksum."
categories = ["cryptography::cryptocurrencies", "encoding"]
keywords = ["satsnet", "base58", "encode", "decode", "checksum"]
edition = "2021"
rust-version = "1.63.0"


[features]
default = ["std"]
std = ["alloc", "hashes/std", "internals/std"]
alloc = ["hashes/alloc", "internals/alloc"]

[dependencies]
hashes = { package = "satsnet_hashes", version = "0.14.0", default-features = false }
internals = { package = "satsnet-internals", version = "0.3.0" }

[dev-dependencies]
hex = { package = "hex-conservative", version = "0.2.0", default-features = false, features = [
    "alloc",
] }
