[package]
name = "satsnet-base58ck"
version = "0.1.0"
authors = ["Jacky Chen <softwarecheng@gmail.com>"]
license = "CC0-1.0"
repository = "https://github.com/sat20-labs/rust-satsnet/"
description = "Bitcoin base58 encoding with checksum."
categories = ["cryptography::cryptocurrencies", "encoding"]
keywords = ["satsnet", "bitcoin", "base58", "encode", "checksum"]
edition = "2021"
rust-version = "1.63.0"

[features]
default = ["std"]
std = ["hashes/std", "internals/std"]

[dependencies]
hashes = { package = "satsnet_hashes", version = "0.14.0", default-features = false, features = [
    "alloc",
] }
internals = { package = "satsnet-internals", version = "0.3.0", features = [
    "alloc",
] }

[dev-dependencies]
hex = { package = "hex-conservative", version = "0.2.0", default-features = false, features = [
    "alloc",
] }
