[package]
name = "bitcoin"
version = "0.32.0-rc1"
authors = ["Jacky Chen <softwarecheng@gmail.com>"]
repository = "https://github.com/sat20-labs/rust-satsnet/"
description = "General purpose library for using and interoperating with satsnet."
categories = ["cryptography::cryptocurrencies"]
keywords = ["satsnet", "crypto", "bitcoin"]
edition = "2021"
rust-version = "1.63.0"

# If you change features or optional dependencies in any way please update the "# Cargo features" section in lib.rs as well.
[features]
default = ["std", "secp-recovery"]
std = [
    "base58/std",
    "bech32/std",
    "hashes/std",
    "hex/std",
    "internals/std",
    "io/std",
    "primitives/std",
    "secp256k1/std",
    "units/std",
    "bitcoinconsensus?/std",
]
rand-std = ["secp256k1/rand-std", "std"]
rand = ["secp256k1/rand"]
serde = [
    "dep:serde",
    "hashes/serde",
    "internals/serde",
    "primitives/serde",
    "secp256k1/serde",
    "units/serde",
]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]
arbitrary = ["dep:arbitrary", "units/arbitrary"]

[dependencies]
base58 = { package = "base58ck", version = "0.1.0", default-features = false, features = [
    "alloc",
] }
bech32 = { version = "0.11.0", default-features = false, features = ["alloc"] }
hashes = { package = "satsnet_hashes", version = "0.14.0", default-features = false, features = [
    "alloc",
    "io",
] }
hex = { package = "hex-conservative", version = "0.2.0", default-features = false, features = [
    "alloc",
] }
internals = { package = "satsnet-internals", version = "0.3.0", features = [
    "alloc",
] }
io = { package = "satsnet-io", version = "0.1.1", default-features = false, features = [
    "alloc",
] }
primitives = { package = "satsnet-primitives", version = "0.100.0", default-features = false, features = [
    "alloc",
] }
secp256k1 = { version = "0.29.0", default-features = false, features = [
    "hashes",
    "alloc",
] }
units = { package = "satsnet-units", version = "0.1.0", default-features = false, features = [
    "alloc",
] }

base64 = { version = "0.22.0", optional = true }
ordered = { version = "0.2.0", optional = true }
# `bitcoinconsensus` version includes metadata which indicates the version of Core. Use `cargo tree` to see it.
bitcoinconsensus = { version = "0.106.0", default-features = false, optional = true }

serde = { version = "1.0.103", default-features = false, features = [
    "derive",
    "alloc",
], optional = true }
arbitrary = { version = "1", optional = true }

[dev-dependencies]
internals = { package = "satsnet-internals", version = "0.3.0", features = [
    "test-serde",
] }
serde_json = "1.0.0"
serde_test = "1.0.19"
bincode = "1.3.1"
hex_lit = "0.1.1"
