[package]
name = "satsnet_hashes"
version = "0.14.1"
license = "CC0-1.0"
authors = ["Jacky Chen <softwarecheng@gmail.com>"]
repository = "https://github.com/sat20-labs/rust-satsnet"
description = "Hash functions used by the rust-bitcoin eccosystem"
categories = ["algorithms"]
keywords = ["satsnet", "crypto", "bitcoin", "hash", "digest"]
edition = "2021"
rust-version = "1.63.0"

[features]
default = ["std"]
std = ["alloc", "hex/std", "satsnet-io/std"]
alloc = ["hex/alloc"]
# If you want I/O you must enable either "std" or "io".
io = ["satsnet-io"]
# Smaller (but slower) implementation of sha256, sha512 and ripemd160
small-hash = []

[dependencies]
hex = { package = "hex-conservative", version = "0.2.0", default-features = false }

satsnet-io = { version = "0.1.3", default-features = false, optional = true }
schemars = { version = "0.8.3", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"
