[package]
name = "satsnet-internals"
version = "0.3.0"
authors = ["Jacky Chen <softwarecheng@gmail.com>"]
repository = "https://github.com/sat20-labs/rust-satsnet/"
description = "Internal types and macros used by satsnet-bitcoin ecosystem"
categories = ["cryptography::cryptocurrencies"]
keywords = ["satsnet", "bitcoin", "internal"]
edition = "2021"
rust-version = "1.63.0"

[features]
default = []
std = ["alloc"]
alloc = []
test-serde = ["serde", "serde_json", "bincode"]

[dependencies]
serde = { version = "1.0.103", default-features = false, optional = true }
# Don't enable these directly, use `test-serde` feature instead.
serde_json = { version = "1.0.68", optional = true }
bincode = { version = "1.3.1", optional = true }
