[package]
name = "satsnet-internals"
version = "0.3.0"
license = "CC0-1.0"
authors = ["Jacky Chen <softwarecheng@gmail.com>"]
repository = "https://github.com/sat20-labs/rust-satsnet/"
description = "Internal types and macros used by satsnet-bitcoin ecosystem"
categories = ["cryptography::cryptocurrencies"]
keywords = ["satsnet", "bitcoin", "internal"]
edition = "2021"
rust-version = "1.63.0"

[features]
default = []
std = ["alloc"]
alloc = []

[dependencies]
serde = { version = "1.0.103", default-features = false, optional = true }
