[package]
name = "satsnet-primitives"
version = "0.100.0"
license = "CC0-1.0"
authors = ["Jacky Chen <softwarecheng@gmail.com>"]
repository = "https://github.com/sat20-labs/rust-satsnet"
description = "Primitive types used by the rust-satsnet ecosystem"
categories = ["cryptography::cryptocurrencies"]
keywords = ["satsnet", "bitcoin", "types"]
edition = "2021"
rust-version = "1.63.0"

[features]
default = ["std"]
std = ["alloc", "internals/std", "io/std", "units/std"]
alloc = ["internals/alloc", "io/alloc", "units/alloc"]
serde = ["dep:serde", "internals/serde", "units/serde", "alloc"]

[dependencies]
internals = { package = "satsnet-internals", version = "0.3.0" }
io = { package = "satsnet-io", version = "0.1.1", default-features = false }
units = { package = "satsnet-units", version = "0.1.0", default-features = false }
ordered = { version = "0.2.0", optional = true }
serde = { version = "1.0.103", default-features = false, features = [
    "derive",
], optional = true }
