[package]
name = "satsnet"
version = "0.32.3"
license = "CC0-1.0"
authors = ["Jacky Chen <softwarecheng@gmail.com>"]
repository = "https://github.com/sat20-labs/rust-satsnet/"
description = "General purpose library for using and interoperating with satsnet."
categories = ["cryptography::cryptocurrencies"]
keywords = ["satsnet", "crypto", "bitcoin"]
edition = "2021"
rust-version = "1.63.0"

[features]
default = ["std", "secp-recovery"]
std = [
    "base58/std",
    "bech32/std",
    "hashes/std",
    "hex/std",
    "internals/std",
    "io/std",
    "secp256k1/std",
    "units/std",
]
rand-std = ["secp256k1/rand-std", "std"]
rand = ["secp256k1/rand"]
serde = [
    "actual-serde",
    "hashes/serde",
    "secp256k1/serde",
    "internals/serde",
    "units/serde",
]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]
bitcoinconsensus-std = ["bitcoinconsensus/std", "std"]

[dependencies]
base58 = { package = "satsnet-base58ck", version = "0.1.1", default-features = false }
bech32 = { version = "0.11.0", default-features = false, features = ["alloc"] }
hashes = { package = "satsnet_hashes", version = "0.14.1", default-features = false, features = [
    "alloc",
    "io",
] }
hex = { package = "hex-conservative", version = "0.2.0", default-features = false, features = [
    "alloc",
] }
hex_lit = "0.1.1"
internals = { package = "satsnet-internals", version = "0.3.1", features = [
    "alloc",
] }
io = { package = "satsnet-io", version = "0.1.3", default-features = false, features = [
    "alloc",
] }
secp256k1 = { version = "0.29.0", default-features = false, features = [
    "hashes",
    "alloc",
] }
units = { package = "satsnet-units", version = "0.1.3", default-features = false, features = [
    "alloc",
] }

base64 = { version = "0.21.3", optional = true }
ordered = { version = "0.2.0", optional = true }
# Only use this feature for no-std builds, otherwise use bitcoinconsensus-std.
bitcoinconsensus = { version = "0.105.0+25.1", default-features = false, optional = true }

# Do NOT use this as a feature! Use the `serde` feature instead.
actual-serde = { package = "serde", version = "1.0.103", default-features = false, features = [
    "derive",
    "alloc",
], optional = true }

[dev-dependencies]
serde_json = "1.0.0"
serde_test = "1.0.19"
bincode = "1.3.1"
