[package]
name = "satsnet-units"
version = "0.1.3"
license = "CC0-1.0"
authors = ["Jacky Chen <softwarecheng@gmail.com>"]
repository = "https://github.com/sat20-labs/rust-satsnet/"
description = "Basic Bitcoin numeric units such as amount"
categories = ["cryptography::cryptocurrencies"]
keywords = ["satsnet", "bitcoin", "newtypes"]
edition = "2021"
rust-version = "1.63.0"

[features]
default = ["std"]
std = ["alloc", "internals/std"]
alloc = ["internals/alloc"]

[dependencies]
internals = { package = "satsnet-internals", version = "0.3.1", features = [
    "alloc",
] }

serde = { version = "1.0.103", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"
